fixed overflow long one-words

--- a/nem-client-api/src/main/webapp/styles/sass/_mixins.scss
+++ b/nem-client-api/src/main/webapp/styles/sass/_mixins.scss
@@ -153,7 +153,7 @@
 
 @mixin break-word() {
     word-break: break-all;
-    word-break: break-word;
+    overflow-wrap: break-word;
 }
 
 @mixin fill-restOfHeight-container() {
